# LLM-Classification-Finetuning

./: .gitignore  README.md  pyproject.toml  requirements-finetune.txt  requirements.txt
configs/: baseline.yaml  finetune.yaml  local_sample.yaml  tfidf_char.yaml  tfidf_cv.yaml  tfidf_features.yaml  tfidf_word_char.yaml
data/sample/: test.csv  train.csv
docs/: experiment_log.md  kaggle_baseline_runbook.md  kaggle_notebook_setup.md  learning_roadmap.md  no_internet_kaggle_templates.md  score_improvement_plan.md
kaggle_cells/: sklearn_tfidf_experiments.py
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_finetune_kaggle.ipynb
scripts/: run_kaggle_baseline.py
src/: __init__.py  baseline.py  check_submission.py  config.py  data.py  finetune.py  predict.py  predict_finetune.py  submission.py  train.py
tests/: __init__.py  helpers.py  test_baseline.py  test_check_submission.py  test_config.py  test_data.py  test_finetune.py  test_notebooks.py  test_run_kaggle_baseline.py  test_submission.py  test_workflow.py
